chore: add expire time

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ SUPABASE_SERVICE_KEY=your_supabase_service_role_key
 # 前端 API 配置
 VITE_API_BASE_URL=http://localhost:8102/api/v1
 
+# JWT 认证配置
+JWT_SECRET=your-super-secret-jwt-key-here
+JWT_EXPIRES_IN=180d
+REFRESH_TOKEN_EXPIRES_IN=365d
+
 # 邮件服务配置
 EMAIL_PROVIDER=console
 EMAIL_FROM=noreply@yuuinih.com
