fix: youai effect

--- a/data/effect_ability.yaml
+++ b/data/effect_ability.yaml
@@ -251,7 +251,7 @@
   condition:
     type: every
     conditions:
-      - type: checkSelf
+      - type: selfUseSkill
       - type: evaluate
         target:
           base: selfMarks
