--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -151,3 +151,5 @@ mark_guanghuizhiying: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@m
 mark_guangzhilingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3138.png'
 mark_guanghuilingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3139.png'
 mark_global_yemu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/20009.png'
+mark_houkongfan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3047.png'
+mark_xingzhihui: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3048.png'
