--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -391,3 +391,15 @@ skill_guangzhilingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@m
 skill_guanghuiluanwu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/12_1_003.mp3'
 skill_baiguangqie: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/12_1_001.mp3'
 skill_guangyinghuanxiang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10597.mp3'
+skill_liuxingquan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_bandao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_houkongfan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_002.mp3'
+skill_huixingquan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_baiguangpao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
+skill_ziguangpao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
+skill_suixingquan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_xingchensuiquan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10285.mp3'
+skill_luoxuanguangpao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
+skill_qiangxingbandao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_zhuixingquan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_xingzhihui: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
