--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -19,7 +19,10 @@
         target: self
         evaluator:
           type: probability
-          percent: 5
+          percent:
+            type: 'raw:number'
+            value: 5
+            tags: ['skill_effect_probability']
 - id: effect_skill_reduce_foe_def_5_percent
   trigger: OnDamage
   priority: 0
@@ -69,7 +72,10 @@
         target: self
         evaluator:
           type: probability
-          percent: 10
+          percent:
+            type: 'raw:number'
+            value: 10
+            tags: ['skill_effect_probability']
 - id: effect_skill_reduce_foe_def_10_percent
   trigger: OnDamage
   priority: 0
@@ -92,7 +98,10 @@
         target: self
         evaluator:
           type: probability
-          percent: 15
+          percent:
+            type: 'raw:number'
+            value: 15
+            tags: ['skill_effect_probability']
 - id: effect_skill_reduce_foe_spa_10_percent
   trigger: OnDamage
   priority: 0
@@ -457,7 +466,10 @@
         target: self
         evaluator:
           type: probability
-          percent: 20
+          percent:
+            type: 'raw:number'
+            value: 20
+            tags: ['skill_effect_probability']
       - *condition_foe_not_fire_element
 - id: effect_skill_add_mark_foe_shaoshang_30_percent
   trigger: OnHit
@@ -472,7 +484,10 @@
         target: self
         evaluator:
           type: probability
-          percent: 30
+          percent:
+            type: 'raw:number'
+            value: 30
+            tags: ['skill_effect_probability']
       - *condition_foe_not_fire_element
 - id: effect_skill_add_mark_foe_shaoshang_50_percent
   trigger: OnHit
@@ -488,7 +503,10 @@
         target: self
         evaluator:
           type: probability
-          percent: 50
+          percent:
+            type: 'raw:number'
+            value: 50
+            tags: ['skill_effect_probability']
 - id: effect_skill_add_mark_foe_shaoshang_60_percent
   trigger: OnHit
   priority: 0
@@ -503,7 +521,10 @@
         target: self
         evaluator:
           type: probability
-          percent: 60
+          percent:
+            type: 'raw:number'
+            value: 60
+            tags: ['skill_effect_probability']
 - id: effect_skill_min_damage_95
   trigger: OnBeforeCalculateDamage
   priority: 0
@@ -2148,7 +2169,10 @@
         target: self
         evaluator:
           type: probability
-          percent: 70
+          percent:
+            type: 'raw:number'
+            value: 70
+            tags: ['skill_effect_probability']
 - id: effect_skill_heal_self_120_hp
   trigger: OnHit
   priority: 0
@@ -2852,7 +2876,10 @@
         target: self
         evaluator:
           type: probability
-          percent: 30
+          percent:
+            type: 'raw:number'
+            value: 30
+            tags: ['skill_effect_probability']
 - id: effect_skill_add_mark_shuiwenpingzhang
   trigger: OnHit
   priority: 0
@@ -2898,7 +2925,10 @@
         target: self
         evaluator:
           type: probability
-          percent: 30
+          percent:
+            type: 'raw:number'
+            value: 30
+            tags: ['skill_effect_probability']
       - *condition_foe_not_water_element
 - id: effect_skill_set_weather_yutian
   trigger: OnHit
@@ -3825,7 +3855,10 @@
         target: self
         evaluator:
           type: probability
-          percent: 5
+          percent:
+            type: 'raw:number'
+            value: 5
+            tags: ['skill_effect_probability']
 # 添加准备动作状态
 - id: effect_skill_add_mark_zhunbeidongzuo
   trigger: OnHit
@@ -4464,7 +4497,10 @@
                 target: self
                 evaluator:
                   type: probability
-                  percent: 10
+                  percent:
+                    type: 'raw:number'
+                    value: 10
+                    tags: ['skill_effect_probability']
           - type: every
             conditions:
               - type: evaluate
@@ -4484,7 +4520,10 @@
                 target: self
                 evaluator:
                   type: probability
-                  percent: 40
+                  percent:
+                    type: 'raw:number'
+                    value: 40
+                    tags: ['skill_effect_probability']
 # 附加40点固伤，具有虚空感应时附加80点固伤
 - id: effect_skill_add_damage_40_or_80_if_has_xukongganying
   trigger: OnBeforeCalculateDamage
@@ -4555,7 +4594,10 @@
         target: self
         evaluator:
           type: probability
-          percent: 15
+          percent:
+            type: 'raw:number'
+            value: 15
+            tags: ['skill_effect_probability']
 # 具有虚空感应时增加50点威力
 - id: effect_skill_add_power_50_if_has_xukongganying
   trigger: AfterUseSkillCheck
@@ -4730,7 +4772,10 @@
         target: self
         evaluator:
           type: probability
-          percent: 20
+          percent:
+            type: 'raw:number'
+            value: 20
+            tags: ['skill_effect_probability']
 
 # 添加电之领域或电磁领域
 - id: effect_skill_add_mark_dianzhilingyu_or_diancilingyu
@@ -4828,9 +4873,10 @@
         evaluator:
           type: probability
           percent:
-            type: raw:number
+            type: 'raw:number'
             configId: bingdong_probability
             value: 40
+            tags: ['skill_effect_probability']
 
 # 对手冰冻时必定暴击
 - id: effect_skill_sure_crit_if_foe_bingdong
@@ -5147,7 +5193,10 @@
         target: self
         evaluator:
           type: probability
-          percent: 70
+          percent:
+            type: 'raw:number'
+            value: 70
+            tags: ['skill_effect_probability']
 
 # 如果对方麻痹，威力翻倍
 - id: effect_skill_power_2x_if_foe_mabi
@@ -5623,5 +5672,197 @@
         evaluator:
           type: probability
           percent: 50
+  condition:
+    type: selfUseSkill
+- id: effect_skill_multihit_50_percent_2_times
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: setMultihit
+    target: usingSkillContext
+    value: 2
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent:
+            type: 'raw:number'
+            value: 50
+            tags: ['skill_effect_probability']
+- id: effect_skill_damage_by_foe_weight
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: addModified
+    target: damageContext
+    percent: 0
+    delta:
+      type: dynamic
+      selector:
+        base: foe
+        chain:
+          - type: select
+            arg:
+              type: dynamic
+              arg: stat.weight
+  condition:
+    type: selfUseSkill
+- id: effect_skill_add_mark_houkongfan
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_houkongfan
+  condition:
+    type: selfUseSkill
+- id: effect_skill_multihit_40_percent_3_times
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: setMultihit
+    target: usingSkillContext
+    value: 3
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent:
+            type: 'raw:number'
+            value: 40
+            tags: ['skill_effect_probability']
+- id: effect_skill_add_mark_foe_haipa_5_percent
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: foe
+    mark:
+      type: entity:baseMark
+      value: mark_haipa
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent:
+            type: 'raw:number'
+            value: 5
+            tags: ['skill_effect_probability']
+- id: effect_skill_add_mark_foe_haipa_10_percent
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: foe
+    mark:
+      type: entity:baseMark
+      value: mark_haipa
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent:
+            type: 'raw:number'
+            value: 10
+            tags: ['skill_effect_probability']
+- id: effect_skill_multihit_35_percent_4_times
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: setMultihit
+    target: usingSkillContext
+    value: 4
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent:
+            type: 'raw:number'
+            value: 35
+            tags: ['skill_effect_probability']
+- id: effect_skill_add_mark_xingzhihui_50
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_xingzhihui
+    stack: 50
+  condition:
+    type: selfUseSkill
+- id: effect_skill_add_mark_foe_haipa_15_percent
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: foe
+    mark:
+      type: entity:baseMark
+      value: mark_haipa
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent:
+            type: 'raw:number'
+            value: 15
+            tags: ['skill_effect_probability']
+- id: effect_skill_multihit_30_percent_4_times
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: setMultihit
+    target: usingSkillContext
+    value: 4
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent:
+            type: 'raw:number'
+            value: 30
+            tags: ['skill_effect_probability']
+- id: effect_skill_add_mark_xingzhihui_20
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_xingzhihui
+    stack: 20
   condition:
     type: selfUseSkill
