--- a/data/mark.yaml
+++ b/data/mark.yaml
@@ -1348,3 +1348,28 @@
     - field
   effect:
     - effect_mark_increase_heal_40_percent
+- id: mark_houkongfan
+  config:
+    duration: 2
+    persistent: false
+    maxStacks: 1
+    stackable: true
+    stackStrategy: refresh
+    destroyable: true
+    keepOnSwitchOut: true
+  tags:
+    - status
+  effect:
+    - effect_mark_evade_physical_attacks
+    - effect_mark_double_special_damage_taken
+- id: mark_xingzhihui
+  config:
+    duration: 5
+    persistent: false
+    maxStacks: 100
+    stackable: true
+    stackStrategy: replace
+    destroyable: true
+    keepOnSwitchOut: true
+  effect:
+    - effect_mark_increase_skill_trigger_rate_with_stack
