chore: move file to cloudflare

--- a/resource/background.yaml
+++ b/resource/background.yaml
@@ -1,11 +1,11 @@
-desert: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/battleBackground/desert.png'
-fly: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/battleBackground/fly.png'
-ground: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/battleBackground/ground.png'
-ingvar: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/battleBackground/ingvar.png'
-universe: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/battleBackground/universe.png'
-wind: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/battleBackground/wind.png'
-fire: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/battleBackground/fire.png'
-grass: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/battleBackground/grass.png'
-ice: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/battleBackground/ice.png'
-laboratory: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/battleBackground/laboratory.png'
-water: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/battleBackground/water.png'
+desert: 'https://seer2-resource.yuuinih.com/png/battleBackground/desert.png'
+fly: 'https://seer2-resource.yuuinih.com/png/battleBackground/fly.png'
+ground: 'https://seer2-resource.yuuinih.com/png/battleBackground/ground.png'
+ingvar: 'https://seer2-resource.yuuinih.com/png/battleBackground/ingvar.png'
+universe: 'https://seer2-resource.yuuinih.com/png/battleBackground/universe.png'
+wind: 'https://seer2-resource.yuuinih.com/png/battleBackground/wind.png'
+fire: 'https://seer2-resource.yuuinih.com/png/battleBackground/fire.png'
+grass: 'https://seer2-resource.yuuinih.com/png/battleBackground/grass.png'
+ice: 'https://seer2-resource.yuuinih.com/png/battleBackground/ice.png'
+laboratory: 'https://seer2-resource.yuuinih.com/png/battleBackground/laboratory.png'
+water: 'https://seer2-resource.yuuinih.com/png/battleBackground/water.png'
