--- a/resource/music.yaml
+++ b/resource/music.yaml
@@ -1,4 +1,4 @@
-BGM_1002: https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/music/battle/BGM_1002.mp3
-BGM_1003: https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/music/battle/BGM_1003.mp3
-BGM_1004: https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/music/battle/BGM_1004.mp3
-BGM_1005: https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/music/battle/BGM_1005.mp3
+BGM_1002: https://seer2-resource.yuuinih.com/music/battle/BGM_1002.mp3
+BGM_1003: https://seer2-resource.yuuinih.com/music/battle/BGM_1003.mp3
+BGM_1004: https://seer2-resource.yuuinih.com/music/battle/BGM_1004.mp3
+BGM_1005: https://seer2-resource.yuuinih.com/music/battle/BGM_1005.mp3
