--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -97,7 +97,7 @@ mark_xinzhiyinji: 'https://seer2-resource.yuuinih.com/png/markImage/3045.png'
 mark_xuehongyinji: 'https://seer2-resource.yuuinih.com/png/markImage/3046.png'
 mark_texiaochufalvshangsheng: 'https://seer2-resource.yuuinih.com/png/markImage/3048.png'
 mark_kongqichuliang: 'https://seer2-resource.yuuinih.com/png/markImage/3049.png'
-mark_yinbozhi: 'https://seer2-resource.yuuinih.com/png/markImage/3050.png'
+mark_yinbo: 'https://seer2-resource.yuuinih.com/png/markImage/3050.png'
 mark_zaoyin: 'https://seer2-resource.yuuinih.com/png/markImage/3051.png'
 mark_yinzhiwang: 'https://seer2-resource.yuuinih.com/png/markImage/3052.png'
 mark_global_qingtian: 'https://seer2-resource.yuuinih.com/png/markImage/20001.png'
