--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -403,3 +403,19 @@ skill_luoxuanguangpao: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.
 skill_qiangxingbandao: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
 skill_zhuixingquan: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
 skill_xingzhihui: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_shengbo: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_shenhuxi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_yinbohuan: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_yinbopao: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_siyao: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_jinyin: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_zaoyin: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_yinbozhadan: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_dafengche: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_yinbopingzhang: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_xuanzhuansiyao: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_chaojiyinbopao: 'https://seer2-resource.yuuinih.com/sound/skill/10301.mp3'
+skill_paoxiaodan: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_yinbao: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_yinbofeidan: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_yinzhiwang: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
