--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -4877,3 +4877,197 @@
   tags: []
   effect:
     - effect_skill_add_mark_xingzhihui_20
+- id: skill_shengbo
+  element: Normal
+  category: Special
+  target: opponent
+  power: 55
+  accuracy: 100
+  rage: 5
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spd_1_stage_5_percent
+- id: skill_shenhuxi
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  accuracy: 100
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spa_1_stages
+- id: skill_yinbohuan
+  element: Normal
+  category: Special
+  target: opponent
+  power: 65
+  accuracy: 95
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_yinbo_45
+- id: skill_yinbopao
+  element: Normal
+  category: Special
+  target: opponent
+  power: 80
+  accuracy: 75
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_yinbo_40
+- id: skill_siyao
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 85
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_liuxie_30_30_percent
+- id: skill_jinyin
+  element: Normal
+  category: Status
+  target: opponent
+  power: 0
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_consume_foe_yinbo_heal_self_2x
+- id: skill_zaoyin
+  element: Normal
+  category: Status
+  target: opponent
+  power: 0
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_consume_foe_yinbo_add_zaoyin
+- id: skill_yinbozhadan
+  element: Normal
+  category: Special
+  target: opponent
+  power: 95
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_yinbo_35
+- id: skill_dafengche
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 30
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  multihit: [3, 4]
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_def_1_stage_15_percent
+- id: skill_yinbopingzhang
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_consume_foe_yinbo_add_yinbopingzhang
+- id: skill_xuanzhuansiyao
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 105
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_liuxie_30_30_percent
+- id: skill_chaojiyinbopao
+  element: Normal
+  category: Climax
+  target: opponent
+  power: 155
+  accuracy: 100
+  rage: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_yinbo_40
+- id: skill_paoxiaodan
+  element: Normal
+  category: Special
+  target: opponent
+  power: 105
+  accuracy: 95
+  rage: 25
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_yinbo_30
+- id: skill_yinbao
+  element: Normal
+  category: Status
+  target: opponent
+  power: 0
+  accuracy: 95
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_consume_foe_yinbo_damage_2x
+- id: skill_yinbofeidan
+  element: Normal
+  category: Special
+  target: opponent
+  power: 25
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  multihit: 4
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_yinbo_10
+- id: skill_yinzhiwang
+  element: Normal
+  category: Status
+  target: opponent
+  power: 0
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_yinzhiwang
